# datomic-rest

./: README.md  datomic-http.cabal  datomic-rest.cabal
Web/: DatomicDSL.hs  DatomicHTTP.hs
Web/Datomic/: REST.hs  SchemaDSL.hs  TransactionDSL.hs
