name:                datomic-http
version:             0.1.0.0
synopsis:            Talk to datomic http api
-- description:         
homepage:            userpages.uni-koblenz.de/~pschuster
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base ==4.6.*
  default-language:    Haskell2010
