name:                datomic-rest
version:             0.1.0.0
synopsis:            Use datomic via its REST API
-- description:         
homepage:            userpages.uni-koblenz.de/~pschuster
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Datomic.REST,
                       Web.Datomic.TransactionDSL
  other-modules:       Web.Datomic.Test
  build-depends:       base,
                       hedn,
                       free,
                       text,
                       bytestring,
                       attoparsec,
                       mtl,
                       errors,
                       HTTP,
                       network
  default-language:    Haskell2010
